--- a/packages/www/package.json
+++ b/packages/www/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-scroll-area": "^1.2.0",
@@ -17,21 +19,26 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@tailwindcss/typography": "^0.5.15",
+    "@tiptap/pm": "^2.8.0",
+    "@tiptap/react": "^2.8.0",
+    "@tiptap/starter-kit": "^2.8.0",
     "ai": "3.4.10",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "d3-scale": "^4.0.2",
     "date-fns": "^4.1.0",
+    "jotai": "^2.10.1",
     "lucide-react": "^0.453.0",
     "openai": "^4.67.3",
-    "react": "19.0.0-rc-2d16326d-20240930",
-    "react-dom": "19.0.0-rc-2d16326d-20240930",
+    "react": "19.0.0-rc-bf7e210c-20241017",
+    "react-dom": "19.0.0-rc-bf7e210c-20241017",
     "react-intersection-observer": "^9.13.1",
-    "react-server-dom-webpack": "19.0.0-rc-2d16326d-20240930",
+    "react-server-dom-webpack": "19.0.0-rc-bf7e210c-20241017",
     "react-textarea-autosize": "^8.5.4",
     "tailwind-merge": "^2.5.4",
     "usehooks-ts": "^3.1.0",
-    "waku": "0.21.3",
+    "waku": "0.21.4",
     "zod": "^3.23.8",
     "zod-to-json-schema": "^3.23.3"
   },
@@ -41,7 +48,7 @@
     "@types/react": "18.3.11",
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.20",
-    "tailwindcss": "3.4.13",
+    "tailwindcss": "3.4.14",
     "typescript": "5.6.3"
   }
 }
