--- a/packages/www/package.json
+++ b/packages/www/package.json
@@ -9,6 +9,7 @@
     "start": "waku start"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^0.10.1",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
@@ -29,6 +30,7 @@
     "d3-scale": "^4.0.2",
     "date-fns": "^4.1.0",
     "jotai": "^2.10.1",
+    "llamaindex": "^0.7.3",
     "lucide-react": "^0.453.0",
     "openai": "^4.67.3",
     "react": "19.0.0-rc-bf7e210c-20241017",
