--- a/packages/www/tsconfig.json
+++ b/packages/www/tsconfig.json
@@ -9,6 +9,7 @@
     "skipLibCheck": true,
     "noUncheckedIndexedAccess": true,
     "exactOptionalPropertyTypes": true,
+    "lib": ["DOM", "DOM.Iterable", "DOM.AsyncIterable"],
     "types": ["react/experimental", "node"],
     "jsx": "react-jsx"
   }
