--- a/packages/www/package.json
+++ b/packages/www/package.json
@@ -43,6 +43,7 @@
     "react-textarea-autosize": "^8.5.4",
     "tailwind-merge": "^2.5.4",
     "usehooks-ts": "^3.1.0",
+    "uuid": "^10.0.0",
     "waku": "0.21.5",
     "zod": "^3.23.8",
     "zod-to-json-schema": "^3.23.3"
@@ -52,6 +53,7 @@
     "@types/node": "^22.7.7",
     "@types/react": "18.3.11",
     "@types/react-dom": "18.3.0",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "10.4.20",
     "tailwindcss": "3.4.14",
     "typescript": "5.6.3"
