--- a/package.json
+++ b/package.json
@@ -1,10 +1,4 @@
 {
   "name": "monorepo",
-  "packageManager": "pnpm@9.12.1",
-  "scripts": {
-    "lint:fix": "prettier --write ."
-  },
-  "devDependencies": {
-    "prettier": "^3.3.3"
-  }
+  "packageManager": "pnpm@9.12.1"
 }
