--- a/talks/cityjs-2024/slide/package.json
+++ b/talks/cityjs-2024/slide/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "slidev build",
-    "dev": "slidev --open",
+    "dev": "slidev",
     "export": "slidev export"
   },
   "slidev": {
@@ -13,11 +13,14 @@
     ]
   },
   "dependencies": {
+    "@iconify/collections": "^1.0.474",
+    "@iconify/json": "^2.2.263",
     "@slidev/cli": "^0.50.0-beta.4",
     "@slidev/theme-default": "latest",
     "@slidev/theme-seriph": "latest",
     "slidev-addon-excalidraw": "^1.0.4",
     "slidev-addon-graph": "^0.0.4",
+    "unocss": "^0.63.6",
     "vue": "^3.5.12"
   }
 }
