fix: icon and excalidraw

--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
   "name": "monorepo",
-  "packageManager": "pnpm@9.12.1"
+  "packageManager": "pnpm@9.12.1",
+  "devDependencies": {
+    "playwright-chromium": "^1.48.1"
+  }
 }
