--- a/package.json
+++ b/package.json
@@ -1,7 +1,25 @@
 {
   "name": "monorepo",
-  "packageManager": "pnpm@9.12.1",
+  "type": "module",
+  "private": true,
+  "slidev": {
+    "addons": [
+      "slidev-addon-excalidraw"
+    ]
+  },
+  "dependencies": {
+    "@iconify/collections": "^1.0.474",
+    "@iconify/json": "^2.2.263",
+    "@slidev/cli": "^0.50.0-beta.4",
+    "@slidev/theme-default": "latest",
+    "@slidev/theme-seriph": "latest",
+    "slidev-addon-excalidraw": "^1.0.4",
+    "slidev-addon-graph": "^0.0.4",
+    "unocss": "^0.63.6",
+    "vue": "^3.5.12"
+  },
   "devDependencies": {
     "playwright-chromium": "^1.48.1"
-  }
+  },
+  "packageManager": "pnpm@9.13.0"
 }
